# mongo-agentic-evolution-hack

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: analyst.py  change_stream.py  context.py  dispatcher.py  nodes.py  proposer.py  reflect_node.py  replay_summarizer.py  runner.py  verdict_node.py
app/: deps.py  main.py
app/routes/: agent.py  case_studies.py
app/schemas/: ingest.py
cloudflared/: config.yml
diagrams/: agent-graph.mmd
docs/: REPLY_to_gabik_4.md  REPLY_to_gabik_handoff_3.md  atlas-setup.md  demo-handoff.md  powersync-integration.md  rag-direct-access.md  website-handoff.md  wildcoral-integration.md
domain/: __init__.py  agent_run.py  case_study.py  enums.py  evidence_session.py  experiment.py  hypothesis.py  learning.py  open_question.py  page.py  validators.py  verdict.py
hitl_ui/: app.py
integrations/: embeddings.py  posthog.py
mongo/: indexes.py
scripts/: hydrate_historical.py  repair_borough.py  tunnel.sh  verify_hydration.py
