[project]
name = "autoresearch"
version = "0.0.1"
description = "Closed-loop autoresearch agent for pSEO experimentation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2",
    "motor>=3.5",
    "openai>=1.40",
]

[project.optional-dependencies]
agent = [
    "langgraph>=0.2",
    "posthog>=3.5",
    "httpx>=0.27",
]
hitl = [
    "streamlit>=1.36",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
